// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Default Nav List - Trigger item active update 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-:rj:"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-:rk:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link1"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 1
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-:rl:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link2"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 2
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-:rm:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link3"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 3
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-:rn:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link4"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 4
          </span>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Default Nav List 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav test-nav-class"
    data-ouia-component-id="OUIA-Generated-Nav-:r1:"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list test-nav-list-class"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-:r2:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link1"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 1
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-:r3:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link2"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 2
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-:r4:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link3"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 3
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-:r5:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link4"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 4
          </span>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Expandable Nav List - Trigger toggle 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-:r19:"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item expandable-group"
        data-ouia-component-id="OUIA-Generated-NavExpandable-:r1b:"
        data-ouia-component-type="PF6/NavExpandable"
        data-ouia-safe="true"
      >
        <button
          aria-expanded="false"
          class="pf-v6-c-nav__link"
          id="grp-1"
        >
          Section 1
          <span
            class="pf-v6-c-nav__toggle"
          >
            <span
              class="pf-v6-c-nav__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 256 512"
                >
                  <path
                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
                  />
                </svg>
              </svg>
            </span>
          </span>
        </button>
        <section
          aria-labelledby="grp-1"
          class="pf-v6-c-nav__subnav"
          hidden=""
          inert=""
        >
          <ul
            class="pf-v6-c-nav__list"
            role="list"
          >
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-:r1c:"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link1"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 1
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-:r1d:"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link2"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 2
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-:r1e:"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link3"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 3
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-:r1f:"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link4"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 4
                </span>
              </a>
            </li>
          </ul>
        </section>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Expandable Nav List 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-:rp:"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavExpandable-:rr:"
        data-ouia-component-type="PF6/NavExpandable"
        data-ouia-safe="true"
      >
        <button
          aria-expanded="false"
          class="pf-v6-c-nav__link"
          id="grp-1"
        >
          Section 1
          <span
            class="pf-v6-c-nav__toggle"
          >
            <span
              class="pf-v6-c-nav__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 256 512"
                >
                  <path
                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
                  />
                </svg>
              </svg>
            </span>
          </span>
        </button>
        <section
          aria-labelledby="grp-1"
          class="pf-v6-c-nav__subnav"
          hidden=""
          inert=""
        >
          <ul
            class="pf-v6-c-nav__list"
            role="list"
          >
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-:rs:"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link1"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 1
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-:rt:"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link2"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 2
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-:ru:"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link3"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 3
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-:rv:"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link4"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 4
                </span>
              </a>
            </li>
          </ul>
        </section>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Expandable Nav List with aria label 1`] = `
<DocumentFragment>
  <nav
    aria-label="Test"
    class="pf-v6-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-:r1h:"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavExpandable-:r1j:"
        data-ouia-component-type="PF6/NavExpandable"
        data-ouia-safe="true"
      >
        <button
          aria-expanded="false"
          class="pf-v6-c-nav__link"
        >
          Section 1
          <span
            class="pf-v6-c-nav__toggle"
          >
            <span
              class="pf-v6-c-nav__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 256 512"
                >
                  <path
                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
                  />
                </svg>
              </svg>
            </span>
          </span>
        </button>
        <section
          aria-labelledby="grp-1"
          class="pf-v6-c-nav__subnav"
          hidden=""
          inert=""
        >
          <h2
            class="pf-v6-screen-reader"
            id="grp-1"
          >
            Section 1 - Example sub-navigation
          </h2>
          <ul
            class="pf-v6-c-nav__list"
            role="list"
          >
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-:r1k:"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link1"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 1
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-:r1l:"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link2"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 2
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-:r1m:"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link3"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 3
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-:r1n:"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link4"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 4
                </span>
              </a>
            </li>
          </ul>
        </section>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Horizontal Nav List 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav pf-m-horizontal"
    data-ouia-component-id="OUIA-Generated-Nav-horizontal-:r25:"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-:r27:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link1"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 1
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-:r28:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link2"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 2
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-:r29:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link3"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 3
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-:r2a:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link4"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 4
          </span>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Horizontal SubNav List 1`] = `
<DocumentFragment>
  <nav
    aria-label="Local"
    class="pf-v6-c-nav pf-m-horizontal pf-m-subnav"
    data-ouia-component-id="OUIA-Generated-Nav-horizontal-subnav-:r2d:"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-:r2f:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link1"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 1
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-:r2g:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link2"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 2
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-:r2h:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link3"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 3
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-:r2i:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link4"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 4
          </span>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Nav Grouped List 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-:r1p:"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <section
      aria-labelledby="grp-1"
      class="pf-v6-c-nav__section"
    >
      <h2
        class="pf-v6-c-nav__section-title"
        id="grp-1"
      >
        Section 1
      </h2>
      <ul
        class="pf-v6-c-nav__list"
        role="list"
      >
        <ul
          class="pf-v6-c-nav__list"
          role="list"
        >
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-:r1r:"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link1"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 1
              </span>
            </a>
          </li>
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-:r1s:"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link2"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 2
              </span>
            </a>
          </li>
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-:r1t:"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link3"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 3
              </span>
            </a>
          </li>
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-:r1u:"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link4"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 4
              </span>
            </a>
          </li>
        </ul>
      </ul>
    </section>
    <section
      aria-labelledby="grp-2"
      class="pf-v6-c-nav__section"
    >
      <h2
        class="pf-v6-c-nav__section-title"
        id="grp-2"
      >
        Section 2
      </h2>
      <ul
        class="pf-v6-c-nav__list"
        role="list"
      >
        <ul
          class="pf-v6-c-nav__list"
          role="list"
        >
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-:r20:"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link1"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 1
              </span>
            </a>
          </li>
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-:r21:"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link2"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 2
              </span>
            </a>
          </li>
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-:r22:"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link3"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 3
              </span>
            </a>
          </li>
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-:r23:"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link4"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 4
              </span>
            </a>
          </li>
        </ul>
      </ul>
    </section>
  </nav>
</DocumentFragment>
`;

exports[`Nav Nav List with custom item nodes 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-:r2l:"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-:r2m:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <div
          class="pf-v6-c-nav__link my-custom-node"
        >
          My custom node
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Nav List with flyout 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-:r2o:"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item pf-m-flyout test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-:r2p:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <div
          class="pf-v6-c-nav__link my-custom-node"
        >
          My custom node
          <span
            class="pf-v6-c-nav__toggle"
          >
            <span
              class="pf-v6-c-nav__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 256 512"
                >
                  <path
                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
                  />
                </svg>
              </svg>
            </span>
          </span>
        </div>
      </li>
    </ul>
    <div
      class=""
      data-popper-escaped="true"
      data-popper-placement="right-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px; z-index: 9999; opacity: 1; transition: opacity 0ms cubic-bezier(.54, 1.5, .38, 1.11); min-width: 0px; transform: translate(0px, 0px);"
    >
      <div>
        Flyout test
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Nav Renders nav list in strict mode 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav test-nav-class"
    data-ouia-component-id="OUIA-Generated-Nav-:r9:"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list test-nav-list-class"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-:rb:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link1"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 1
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-:rd:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link2"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 2
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-:rf:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link3"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 3
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-:rh:"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link4"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 4
          </span>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
